Revert "Fix Menu Links overlap with iPhone notch in browser landscape mode"
This reverts commit 4f0762ae3c0632b3ddb4110fae7c1fc5fef49535.

--- a/src/scss/02-layout/_menu-app-menu-links.scss
+++ b/src/scss/02-layout/_menu-app-menu-links.scss
@@ -127,6 +127,15 @@ body {
 
 // Responsive --------------------------------------------------------------------
 ///
+.landscape {
+	.layout-native {
+		.app-menu-links {
+			padding-left: calc(var(--os-safe-area-left) / 2);
+		}
+	}
+}
+
+///
 .desktop {
 	.layout:not(.layout-side) .app-menu-links {
 		display: flex;
@@ -143,7 +152,6 @@ body {
 		-webkit-overflow-scrolling: touch;
 		overflow-y: auto;
 		padding-top: var(--space-s);
-    padding-left: calc(var(--os-safe-area-left) / 2);
 
 		a {
 			// Service Studio preview
